--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 addEventListener('load',async () => {
 
     let sw= await navigator.serviceWorker.register('./sw.js');
-    console.log(sw);
+   // console.log(sw);
 });     
 async function subscribe()
 {
