--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <button onclick="subscribe()">Subscribe</button>
-
+<script src="push.js"></script>
 <script>
 
 addEventListener('load',async () => {
@@ -24,7 +24,9 @@ async function subscribe()
 userVisibleOnly:true,
 applicationServerKey:'BBxYcX5EVrEypniCr6VBTC63WQ385spbUUQbygFTUyrF8QEyACdDBb11Wzwv7H1j799F53YIkD1xhcn1NLV6QJc'
     })
+    
     console.log(JSON.stringify(push));
+    SendNotificationtesting(JSON.stringify(push))
 }
 </script>
 
