--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ userVisibleOnly:true,
 applicationServerKey:'BBxYcX5EVrEypniCr6VBTC63WQ385spbUUQbygFTUyrF8QEyACdDBb11Wzwv7H1j799F53YIkD1xhcn1NLV6QJc'
     })
     
-    console.log(push);
+    console.log(JSON.stringify(push));
     
 }
 </script>
