--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <meta  charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie-edge">
+<script src="push.js" lang="javascript"></script>
 <title>Document</title>
 </head>
 <body>
 
 <button onclick="subscribe()">Subscribe</button>
-<script src="push.js" lang="javascript"></script>
+
 <script>
 
 addEventListener('load',async () => {
@@ -26,7 +27,7 @@ applicationServerKey:'BBxYcX5EVrEypniCr6VBTC63WQ385spbUUQbygFTUyrF8QEyACdDBb11Wz
     })
     
     console.log(JSON.stringify(push));
-    
+    SendNotificationMessage();
 }
 </script>
 
