--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ applicationServerKey:'BBxYcX5EVrEypniCr6VBTC63WQ385spbUUQbygFTUyrF8QEyACdDBb11Wz
     
     console.log(JSON.stringify(push));
     SendNotificationMessage();
+    functiontest();
 }
 </script>
 
