--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
 
 <button onclick="subscribe()">Subscribe</button>
-<button onclick="getNotification()"></button>
+
+<button onclick="unscbscriben()">Unscbscriben</button>
 <script>
 
 addEventListener('load',async () => {
@@ -18,7 +19,7 @@ addEventListener('load',async () => {
     let sw= await navigator.serviceWorker.register('./sw.js');
    // console.log(sw);
 });  
-async function getNotification()
+async function unscbscriben()
 {
 
 }   
