--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 <title>Document</title>
 </head>
 <body>
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+          <img src=""  alt="">
+          Bootstrap
+        </a>
+      </nav>
 <label id=lblmessage>Welcome to my website........</label><br>
 <button onclick="subscribe()">Subscribe</button>
 
