--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie-edge">
 <script src="push.js" lang="javascript"></script>
+
 <title>Document</title>
 </head>
 <body>
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="#">
           <img src=""  alt="">
-          Bootstrap
+          Welcome to my website........
         </a>
       </nav>
-<label id=lblmessage>Welcome to my website........</label><br>
+<label id=lblmessage></label><br>
 <button onclick="subscribe()">Subscribe</button>
 
 <button onclick="unscbscriben()">Unscbscriben</button>
