--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <label id=lblmessage></label><br>
 <button onclick="subscribe()">Subscribe Notification</button>
 
-<button onclick="unsubscription()">Unsubscription Notification</button>
+<button onclick="unsubscription()">Unsubscribe Notification</button>
 <script>
 
 addEventListener('load',async () => {
