--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </a>
       </nav>
 <label id=lblmessage></label><br>
-<button onclick="subscribe()">Subscribe Notification</button>
+<button onclick="subscribe()">Subscribe Notifications</button>
 
-<button onclick="unsubscription()">Unsubscribe Notification</button>
+<button onclick="unsubscription()">Unsubscribe Notifications</button>
 <script>
 
 addEventListener('load',async () => {
